This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

19-Jun-2005 (Lars Duening)  (3.3.708)
  - (pkg-pgsql, func_spec) Added new efun pg_conv_string(), courtesy
      of Philipp.
  - (efuns.c) Added new flag setting '4' to get_type_info() for closures
      (Bug #0000392).
  - (parse.c) Possibly corrected a refcounting bug in handling prepositions
      (Bug #0000391).
  - (closure.c) Since the operators #'&, #'|, #'^ and #'! are now considered
      efuns, the closure compiler skipped the special treatment of these.
      As an added bonus of the correction, #'| and #'^ can now take
      an arbitrary number of arguments, too. (Bug #0000391)

10-Jun-2005 (Lars Duening)  (3.3.707)
  - (gcollect, backend.c) If the number of destructed pending objects
      exceeds the number of active objects, a cleanup of all objects
      is triggered. Also, the incremental cleanup in each cycle
      cleans at least the number of objects destructed in the cycle.

06-Jun-2005 (Lars Duening)  (3.3.706)
  - (object.c, sprintf.c, structs.c) Removed a couple compilation warnings
      on x86-64.

15-May-2005 (Lars Duening)  (3.3.705 = 3.4.0)
  - (simulate.c) runtime_error(), runtime_warning() and heart_beat_error()
      received a new argument 'caught' (Bug #0000385).

15-May-2005 (Lars Duening)  (3.3.704)
  - (object.c) Single-character operator closures like #'- couldn't
      be restored in arrays due to some outdated hack in the parser
      (Bug #0000384 and #0000386).

15-May-2005 (Lars Duening)  (3.3.703)
  - (sprintf) sprintf("%c", 0) returned an empty string instead of a
      string with the 0 character, because the code used the system
      sprintf() for this formatting internally (Bug #0000378).

14-May-2005 (Lars Duening)  (3.3.702)
  - (sprintf) Printing structures with "%O" or "%Q" in non-compact
      mode also prints the names of the structure members (Bug #0000380).
