@@ -59,24 +59,16 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 708)
-(Parent-Version lpmud 3-3 707)
+(Project-Version lpmud 3-3 709)
+(Parent-Version lpmud 3-3 708)
 (Version-Log "
-  - (pkg-pgsql, func_spec) Added new efun pg_conv_string(), courtesy
-      of Philipp.
-  - (efuns.c) Added new flag setting '4' to get_type_info() for closures
-      (Bug #0000392).
-  - (parse.c) Possibly corrected a refcounting bug in handling prepositions
-      (Bug #0000391).
-  - (closure.c) Since the operators #'&, #'|, #'^ and #'! are now considered
-      efuns, the closure compiler skipped the special treatment of these.
-      As an added bonus of the correction, #'| and #'^ can now take
-      an arbitrary number of arguments, too. (Bug #0000391)
+  - (xalloc.c) xalloc used REPLACE_MALLOC before it was defined,
+      leading to compilation errors on systems supporting it (Bug #0000393).
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Sun, 19 Jun 2005 23:09:27 -0600")
+(Checkin-Time "Mon, 20 Jun 2005 08:13:01 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -119,7 +111,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.12 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.86 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.768.1.3 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.768.1.4 644))
   (HISTORY (lpmud/f/49_HISTORY 1.385.1.25.1.1 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.22 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -376,7 +368,7 @@
   (src/wiz_list.h (lpmud/1_wiz_list.h 1.5.1.7.1.3 644))
   (src/wiz_list.c (lpmud/2_wiz_list.c 1.13.1.14.1.7 644))
   (src/xalloc.h (lpmud/g/51_xalloc.h 1.27 644))
-  (src/xalloc.c (lpmud/h/0_xalloc.c 1.2.1.50 644))
+  (src/xalloc.c (lpmud/h/0_xalloc.c 1.2.1.51 644))
   (src/xptmalloc.c (lpmud/d/b/10_xptmalloc. 1.6 644))
 
   ;; Build files
