@@ -148,7 +148,7 @@ static t_stat xalloc_stat = {0,0};
   /* Total number and size of allocations done by the driver (incl overhead).
    */
 
-#if defined(REPLACE_MALLOC) && defined(SBRK_OK)
+#if defined(SBRK_OK)
 static t_stat clib_alloc_stat = {0,0};
   /* Number and size of allocations done through the clib emulation
    * functions (incl overhead).
